<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    Top bar here    -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/shiftName"
        android:padding="20dp"
        android:text="@string/err"
        android:fontFamily="@font/rastaman"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textColor="@color/purple"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="75dp"/>




    <!--    Controls -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingHorizontal="20dp">

        <!--        ADD SHIFT BUTTON     -->
        <Button
            android:id="@+id/addShift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/addSong"
            android:textSize="40dp"/>

        <!--        REMOVE SHIFT BUTTON  -->
        <Button
            android:id="@+id/removeShift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:text="@string/removeSong"
            android:textSize="40dp"/>


    </RelativeLayout>

</RelativeLayout>