<?xml version="1.0" encoding="utf-8"?>
<!--    NOT TO BE CONFUSED WITH PLAYLIST LIST    -->
<!--    This is for adding songs to your playlists    -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    Top bar here    -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/playlistName"
        android:padding="20dp"
        android:text="@string/err"
        android:fontFamily="@font/rastaman"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textColor="@color/purple"/>

    <ListView
        android:id="@+id/songList"
        android:paddingTop="40dp"
        android:layout_alignBaseline="@+id/playlistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--    Controls -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/songList"
        android:paddingHorizontal="20dp">

        <!--        ADD SONG BUTTON     -->
        <Button
            android:id="@+id/addSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/addSong"
            android:textSize="40dp"/>

        <!--        REMOVE SONG BUTTON  -->
        <Button
            android:id="@+id/removeSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:text="@string/removeSong"
            android:textSize="40dp"/>


    </RelativeLayout>

</RelativeLayout>